--- a/style.css
+++ b/style.css
@@ -1,54 +1,64 @@
-#calculator {
-    width: 400px;
-    margin: 0 auto;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    padding: 20px;
-    font-family: Arial, sans-serif;
+*, *::before, *::after {
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+  font-weight: normal;
 }
 
-.display-container {
-    text-align: right;
-    margin-bottom: 10px;
+body {
+  margin: 0;
+  padding: 0;
+  background: #3498db;
 }
 
-.button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.calculator-grid {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: repeat(4, 120px);
+  grid-template-rows: minmax(140px, auto) repeat(5, 120px);
 }
 
-.row {
-    display: flex;
-    justify-content: center;
+.calculator-grid > button {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #ecf0f1; 
+  background-color: #2c3e50; 
+  border: 1px solid #34495e; 
+  outline: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
 }
 
-.calc-button {
-    width: 60px;
-    height: 60px;
-    font-size: 20px;
-    background-color: #f2f2f2; /* Button background color */
-    color: #333;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 5px;
-    transition: background-color 0.2s, transform 0.1s;
+.calculator-grid > button:hover {
+  background-color: #2980b9;
 }
 
-.calc-button.operation {
-    background-color: #f2a541; /* Color for operation buttons (+, -, *, /) */
-    color: white;
-    border: 1px solid #c78c3e;
+.span-two {
+  grid-column: span 2;
+  color: #e74c3c;
+  background-color: rgba(231, 76, 60, 0.8);
 }
 
-.calc-button:hover {
-    background-color: #dcdcdc; /* Button background color on hover */
+.output {
+  grid-column: 1 / -1;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
-.calc-button:active {
-    transform: scale(0.95);
+.output .previous-operand {
+  color: rgba(255, 255, 255, 0.75);
+  font-size: 1.5rem;
+}
+
+.output .current-operand {
+  color: white;
+  font-size: 2.5rem;
 }
